--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -25,7 +25,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:text="Welcome to Donate+, an app made with a goal of making the process of donating blood easier for everyone in emergency situations."
         android:textColor="#9DC944"
         android:textSize="18sp"
@@ -66,5 +66,16 @@
             android:textColor="#ffff"
             android:textSize="24sp"
             />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </LinearLayout>
