--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -277,6 +277,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/solid_button"
                     android:text="@string/postdescription_button_accept"
+                    android:id="@+id/postdesc_button_accept"
                     android:textColor="#FFFFFF" />
             </LinearLayout>
 
