--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -118,6 +118,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/solid_btn_red"
                     android:layout_weight="4"
+                    android:id="@+id/postdes_bloodgroup"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -159,6 +160,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/solid_btn_red"
                     android:layout_weight="4"
+                    android:id="@+id/postdes_location"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -200,6 +202,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/solid_btn_red"
                     android:layout_weight="4"
+                    android:id="@+id/postdes_cellno"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -241,6 +244,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/solid_btn_red"
                     android:layout_weight="4"
+                    android:id="@+id/postdes_dateofbirth"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -273,11 +277,11 @@
                 >
 
                 <Button
+                    android:id="@+id/postdesc_button_accept"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="22dp"
                     android:background="@drawable/solid_button"
                     android:text="@string/postdescription_button_accept"
-                    android:id="@+id/postdesc_button_accept"
                     android:textColor="#FFFFFF" />
             </LinearLayout>
 
