--- a/app/src/main/res/layout/activity_hospital_and_blood_bank.xml
+++ b/app/src/main/res/layout/activity_hospital_and_blood_bank.xml
@@ -26,23 +26,27 @@
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
+            android:id="@+id/feed_button_profile"
             android:background="@drawable/icon_profile"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:id="@+id/feed_button_notification"
             android:layout_weight="1"
             android:background="@drawable/icon_notification"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:id="@+id/feed_button_hospitals"
             android:layout_weight="1"
             android:background="@drawable/icon_hobb_green"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:id="@+id/feed_button_settings"
             android:layout_weight="1"
             android:background="@drawable/icon_setting"/>
 
