--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FEF9C2"
     android:orientation="vertical"
     tools:context=".Settings">
 
@@ -12,7 +13,6 @@
         android:layout_width="match_parent"
         android:weightSum="5"
         android:orientation="horizontal"
-        android:background="#B2BEB5"
         android:layout_margin="10dp">
 
         <Button
@@ -47,5 +47,13 @@
             android:background="@drawable/icon_setting_green"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/solid_button"
+        android:text="LOG OUT"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
