--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PostNewEvent"
+    android:background="#FEF9C2"
     android:orientation="vertical"
     >
     <ScrollView
