--- a/app/src/main/res/layout/list_newsfeed.xml
+++ b/app/src/main/res/layout/list_newsfeed.xml
@@ -15,52 +15,65 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:background="@color/green"
-            android:orientation="vertical">
+            android:layout_margin="5dp"
+            android:weightSum="6"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/feed_lv_blood"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Blood Group : "
-                    android:textColor="#FFFFFF"
-                    android:textSize="17sp" />
+                android:layout_height="match_parent"
+                android:background="@drawable/textview_border"
+                android:layout_weight="4"
+                >
 
                 <TextView
                     android:id="@+id/feed_text_blood"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:textColor="#FFFFFF"
-                    android:textSize="17sp" />
+                    android:textSize="32sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/feed_lv_location"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/textview_border"
+                android:weightSum="2"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Location       : "
-                    android:textColor="#FFFFFF"
-                    android:textSize="17sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/feed_text_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#FFFFFF"
-                    android:textSize="17sp" />
+                    <TextView
+                        android:id="@+id/feed_text_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" >
+
+                    <TextView
+                        android:id="@+id/feed_text_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"/>
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
