--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -207,14 +207,29 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
+                    android:weightSum="8"
+                    android:orientation="horizontal"
                     android:layout_gravity="center"
                     >
 
                     <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/post_dateofbirth"
-                        android:layout_weight="4" />
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:id="@+id/post_dateofrequirement"
+                        android:layout_weight="5"
+                        android:text="DD-MM-YYYY"
+                        android:textAlignment="center"
+                        android:textSize="15dp"/>
+
+                    <Button
+                        android:id="@+id/post_datepicker"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:background="@drawable/solid_button"
+                        android:text="Pick"
+                        android:textSize="15dp" />
+
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
