--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -55,6 +55,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/setting_button_logout"
         android:background="@drawable/solid_button"
         android:text="LOG OUT"
         android:layout_gravity="center_horizontal"
