--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -217,7 +217,7 @@
                         android:layout_height="match_parent"
                         android:id="@+id/post_dateofrequirement"
                         android:layout_weight="5"
-                        android:text="DD-MM-YYYY"
+                        android:hint="DD-MM-YYYY"
                         android:textAlignment="center"
                         android:textSize="15dp"/>
 
