--- a/app/src/main/res/drawable/solid_btn.xml
+++ b/app/src/main/res/drawable/solid_btn.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:bottomLeftRadius="40dp"
-        android:bottomRightRadius="40dp"
-        android:topLeftRadius="0dp"
-        android:topRightRadius="40dp"/>
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"/>
     <solid
-        android:color="#44bd32"
+        android:color="#fff"
         />
     <padding
         android:left="0dp"
