Login problem handled

--- a/app/src/main/res/layout/activity_show_post_location.xml
+++ b/app/src/main/res/layout/activity_show_post_location.xml
@@ -22,21 +22,21 @@
         android:layout_marginRight="10dp">
 
         <ImageView
+            android:id="@+id/postlocation_image_search"
             android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:id="@+id/postlocation_image_search"
-            android:src="@drawable/ic_action_name"
-            ></ImageView>
+            android:src="@drawable/icon_search">
+        </ImageView>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/postlocation_searchbar"
             android:layout_toRightOf="@+id/postlocation_image_search"
             android:layout_centerVertical="true"
-            android:id="@+id/postlocation_searchbar"
             android:imeOptions="actionSearch"
-            ></EditText>
+            tools:ignore="DuplicateIds"></EditText>
 
     </RelativeLayout>
 
