Login Page polished.

--- a/app/src/main/res/drawable/solid_button.xml
+++ b/app/src/main/res/drawable/solid_button.xml
@@ -6,7 +6,7 @@
         android:topLeftRadius="40dp"
         android:topRightRadius="40dp"/>
     <solid
-        android:color="@color/green"
+        android:color="@color/colorPrimary"
 
         />
     <padding
