--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#AEDCC0</color>
+    <color name="colorPrimaryDark">#2EBB8F</color>
+    <color name="colorAccent">#191516</color>
     <color name="green">#9DC944</color>
     <color name="red">#F2ADB9</color>
 </resources>
