--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FEF9C2"
     tools:context=".NewsFeed"
     android:orientation="vertical"
     >
@@ -14,55 +13,68 @@
         android:layout_width="match_parent"
         android:weightSum="5"
         android:orientation="horizontal"
-
         android:layout_margin="10dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/feed_button_feed"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
-            android:background="@drawable/icon_feed_green" />
+            android:layout_margin="2dp"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:icon="@drawable/icon_feed"
+            app:iconSize="50dp"></com.google.android.material.button.MaterialButton>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:id="@+id/feed_button_profile"
             android:layout_weight="1"
-            android:background="@drawable/icon_profile"
-            android:id="@+id/feed_button_profile"/>
+            android:layout_margin="2dp"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/icon_profile"
+            app:iconSize="50dp"></com.google.android.material.button.MaterialButton>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:id="@+id/feed_button_notification"
             android:layout_weight="1"
-            android:background="@drawable/icon_notification" />
+            android:layout_margin="2dp"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/icon_notification"
+            app:iconSize="50dp"></com.google.android.material.button.MaterialButton>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:id="@+id/feed_button_hospitals"
             android:layout_weight="1"
-            android:background="@drawable/icon_hobb"/>
+            android:layout_margin="2dp"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/icon_hobb"
+            app:iconSize="50dp"></com.google.android.material.button.MaterialButton>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:id="@+id/feed_button_settings"
             android:layout_weight="1"
-            android:background="@drawable/icon_setting"/>
+            android:layout_margin="2dp"
+            app:backgroundTint="@color/colorPrimary"
+            app:icon="@drawable/icon_setting"
+            app:iconSize="50dp"></com.google.android.material.button.MaterialButton>
 
     </LinearLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/feed_button_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/solid_button"
+        app:backgroundTint="@color/colorPrimary"
         android:text="Request for Blood"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp" />
+        ></com.google.android.material.button.MaterialButton>
 
 
     <androidx.recyclerview.widget.RecyclerView
