--- a/app/src/main/res/layout/activity_show_post_location.xml
+++ b/app/src/main/res/layout/activity_show_post_location.xml
@@ -24,21 +24,28 @@
 
         <ImageView
             android:id="@+id/postlocation_image_search"
-            android:layout_width="50dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/icon_search">
-        </ImageView>
+            android:src="@drawable/icon_search"></ImageView>
+
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/postlocation_searchbar"
-            android:layout_toRightOf="@+id/postlocation_image_search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:imeOptions="actionSearch"
+            android:layout_toRightOf="@+id/postlocation_image_search"
             android:hint="Type location and press enter"
+            android:imeOptions="actionSearch"
             tools:ignore="DuplicateIds"></EditText>
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/postlocation_searchbar"
+            android:id="@+id/postlocation_button"
+            android:text="GO"
+            ></Button>
 
     </RelativeLayout>
     <ImageView
@@ -48,6 +55,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
         android:scaleType="centerCrop"
         android:id="@+id/ic_gps"
         android:src="@drawable/icon_gps"></ImageView>
